# superrec2

./: .mypy.ini  .pylintrc  Makefile  README.md  draw.py  findings.md  pyproject.toml  reconcile.py  requirements.txt  search.py
data/: crispr-class1.in.json  example-color.in.json  example.in.json  example.out.json  minimal.in.json  minimal.out.json
superrec2/: draw.py  geometry.py  lowest_common_ancestor.py  min_sequence.py  range_min_query.py  reconciliation.py  reconciliation_draw.py  test_draw.py  test_lowest_common_ancestor.py  test_min_sequence.py  test_range_min_query.py  test_reconciliation.py  test_reconciliation_draw.py  test_utils.py  thl.py  utils.py
superrec2/compute/: exhaustive.py  reconciliation.py  super_reconciliation.py  test_exhaustive.py  test_reconciliation.py  test_super_reconciliation.py  test_unordered_super_reconciliation.py  unordered_super_reconciliation.py
superrec2/model/: reconciliation.py  synteny.py  test_reconciliation.py  test_synteny.py  test_tree_mapping.py  tree_mapping.py
superrec2/reconciliation/: __init__.py  compute.py  draw.py  syntenies.py  test_compute.py  test_draw.py  test_syntenies.py  test_tools.py  tools.py
superrec2/render/: __init__.py  layout.py  model.py  test_draw.py  tikz.py
superrec2/utils/: __init__.py  disjoint_set.py  dynamic_programming.py  escape.py  geometry.py  lowest_common_ancestor.py  mappings.py  min_sequence.py  range_min_query.py  subsequences.py  test_disjoint_set.py  test_dynamic_programming.py  test_escape.py  test_file.py  test_lowest_common_ancestor.py  test_mappings.py  test_tex.py  (+10 more)
(+110 files in other folders)
