[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superrec2"
version = "0.1.0"
authors = [
    { name="Mattéo Delabre", email="git.matteo@delab.re" },
]
description = "Run and compare algorithms for phylogenetic reconciliation and super-reconciliation"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "infinity",
    "ete3",
    "six",
    "numpy",
    "tqdm",
]

[project.scripts]
superrec2 = "superrec2.cli.__main__:run"

[project.urls]
"Homepage" = "https://github.com/UdeM-LBIT/superrec2"
"Bug Tracker" = "https://github.com/UdeM-LBIT/superrec2/issues"

[tool.hatch.build]
sources = ["src"]
only-include = ["src"]

[tool.hatch.envs.dev]
dependencies = [
    "pytest",
    "black",
    "ruff",
]

[tool.hatch.envs.dev.scripts]
update-fixtures = "./tests/render/update-fixtures"
test = "pytest --exitfirst"
test-verbose = "pytest --exitfirst -vv"
format = "black ."
format-check = "black --check ."
lint = "ruff check ."

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
